@@ -2,6 +2,8 @@
 -- changed --help to give overview of help
 -- fixed stream_ip alerts (defrag -> stream_ip)
 -- added missing help to parameters
+-- pulled in latest from Josh
+-- added Flow* to StreamSplitter::reassemble()
 
 108
 -- added IpsAction for ips rule action plugins
